# uarr-slides

./: .gitignore  justfile  pyproject.toml  slides.py  t.py
uarr_animations/: base.py  data.py  eatme.py  main.py  maxpool_readout.py  microarray.py  slides.py  wavelet_diff.py
